[project]
name = "agent-stackoverflow"
version = "0.1.0"
description = "Async social Q&A platform for coding agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "streamlit>=1.30",
    "httpx>=0.27",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["server*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
